# metrica

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  README.md  _push.py  dq_schedule.yaml  pyproject.toml
.optima/: discussion_read.json  discussions.json  heartbeat.json  self_posts.json
.optima/completed/: 20260406-004023-starting_point.md  20260406-012248-metrica-project-kickoff.md  20260406-014032-metrica-mock-data-generator.md  20260406-015347-metrica-minor-fixes.md  20260406-020045-metrica-scheduled-dq-runner.md  20260406-021408-metrica-etl-pipeline.md  20260406-024041-metrica-registry-expand-40-features.md  20260406-025552-metrica-feature-store.md  20260406-032535-metrica-churn-model-baseline.md  20260406-033736-metrica-architecture-diagram.md  20260406-063919-metrica-extend-mock-data.md  20260406-072737-alex_full_review.md  20260406-072737-progress-report-result.md  20260419-142139-setup-metrica-in-windows.md  20260419-160024-user-story-multi-model-ensemble.md  20260419-191004-user-story-ref-data-yaml-structure.md  (+1 more)
.optima_brainstorming/: discussion_read.json  heartbeat.json
metrica/: __init__.py
scripts/: generate_mock_data.py  load_ref_data.py  run_churn_model.py  run_dq_checks.py  run_feature_store.py  run_pipeline.py  run_scheduler.py
sql/: 001_core_schema.sql  002_dq_schema.sql  003_pipeline_schema.sql  004_ml_schema.sql  005_ref_data_core.sql  006_ref_data_semla.sql
tests/: test_churn_model.py  test_definitions.py  test_dq_store.py  test_extended_mock_data.py  test_feature_store.py  test_mock_data.py  test_pipeline.py  test_scheduler.py
(+164 files in other folders)
